Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26952

uninitialized variable in qgl.cpp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.4
    • 4.8.2
    • GUI: OpenGL
    • None
    • 8efe2390a35cd76abbe474650ee8af8df5a31a20

      running the "affine" demo on Fedora 17 64-bit in VMware Workstation 8.0.4

      Graphics: "Gallium 0.4 on llvmpipe (LLVM 0x300)"

      qgl.cpp line 5540:
      GLboolean srgbCapableFramebuffers;
      glGetBooleanv(FRAMEBUFFER_SRGB_CAPABLE_EXT, &srgbCapableFramebuffers);
      if (srgbCapableFramebuffers)
      glExtensions |= SRGBFrameBuffer;

      the variable "srgbCapableFramebuffers" is not set, thus valgrind complains about uninitialized memory. The variable should be initialized to a default value in case it is not set by glGetBooleanv().

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            rodal Samuel Rødal
            frantaylor Fran Taylor
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes