src/opengl/qgl.cpp
@@ -4851,7 +4851,7 @@ QGLExtensions::Extensions QGLExtensions::currentContextExtensions()
         glExtensions |= BGRATextureFormat;
 
     {
-        GLboolean srgbCapableFramebuffers;
+        GLboolean srgbCapableFramebuffers = false;
         glGetBooleanv(GL_FRAMEBUFFER_SRGB_CAPABLE_EXT, &srgbCapableFramebuffers);
         if (srgbCapableFramebuffers)
             glExtensions |= SRGBFrameBuffer;
